hphp/test/slow/libxml/dom-element-lifetime.php.expectf
string(13) "<root></root>"

Fatal error: Uncaught exception 'DOMException' with message 'No Modification Allowed Error' in %s/dom-element-lifetime.php:20
Stack trace:
%A
